full-moon/tests/cases/fail/parser/last-stmt-1/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/last-stmt-1
---
error[ast]: expected `end` to close function body block
  ┌─ source.lua:2:2
  │
2 │     return 1
  │     ^^^^^^^^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:4:1
  │
4 │ end
  │ ^^^


